vreserv base change for scens

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -269,15 +269,25 @@
     "            bcul_vars = [\"SetDD\", \"BeginVerdd\", \"dw1\", \"dw2\", \"critbrix\", \"banth\", \"canth\"]\n",
     "            cul_vars = [\"VarietyName\", \"VarietyID\", \"P1VV\", \"P2BB\", \"P3FF\", \"P4HH\", \"P5LF\", \"G1BN\", \"PHINT\"]\n",
     "            f = [\"BerryCultivar.json\", \"Cultivar.json\"]\n",
+    "            #bc_par_df = pd.DataFrame([[100,700,0.000175,0.0009,19,0.331,17.929],\n",
+    "             #             [100,700,0.00015,0.0008,19,0.0,0.0],\n",
+    "              #            [100,700,0.0002,0.003,19,2.49,17.272],\n",
+    "               #           [100,700,0.00015,0.01,19,0.0,0.0]], \n",
+    "                #         index=varieties, columns=bcul_vars)  # from CSIRO_VineLOGIC_datasets (Shiraz modified)\n",
     "            bc_par_df = pd.DataFrame([[100,700,0.000175,0.0009,19,0.331,17.929],\n",
-    "                          [100,700,0.00015,0.0008,19,0.0,0.0],\n",
-    "                          [100,700,0.0002,0.003,19,2.49,17.272],\n",
-    "                          [100,700,0.00015,0.01,19,0.0,0.0]], \n",
-    "                         index=varieties, columns=bcul_vars)  # from CSIRO_VineLOGIC_datasets (Shiraz modified)\n",
+    "                          [100,700,0.000175,0.0012,19,0.0,0.0],\n",
+    "                          [100,700,0.000234,0.0045,19,2.49,17.272],\n",
+    "                          [100,700,0.000175,0.015,19,0.0,0.0]], \n",
+    "                         index=varieties, columns=bcul_vars)  # from CSIRO_VineLOGIC_datasets (all modified in line w Shirax experiementation and \"calibration\" to obs irrig-yield\n",
+    "            #c_par_df = pd.DataFrame([[\"SHIRAZ\",\"IB0007\",5,325,140,1450,800,0.5,42.0],\n",
+    "             #             [\"CHARDONNAY\",\"IB0003\",5,210,180,1550,900,1.0,42.0],\n",
+    "              #            [\"CABERNET SAUVIGNON\",\"IB0002\",5,275,125,1700,500,0.9,42.0],\n",
+    "               #           [\"COLOMBARD\",\"IB0015\",5,210,160,1650,900,1.0,42.0]], \n",
+    "                #         index=varieties, columns=cul_vars)  # from CSIRO_VineLOGIC_datasets\n",
     "            c_par_df = pd.DataFrame([[\"SHIRAZ\",\"IB0007\",5,325,140,1450,800,0.5,42.0],\n",
-    "                          [\"CHARDONNAY\",\"IB0003\",5,210,180,1550,900,1.0,42.0],\n",
-    "                          [\"CABERNET SAUVIGNON\",\"IB0002\",5,275,125,1700,500,0.9,42.0],\n",
-    "                          [\"COLOMBARD\",\"IB0015\",5,210,160,1650,900,1.0,42.0]], \n",
+    "                          [\"CHARDONNAY\",\"IB0003\",5,210,160,1500,800,0.5,42.0],\n",
+    "                          [\"CABERNET SAUVIGNON\",\"IB0002\",5,325,140,1450,800,0.5,42.0],\n",
+    "                          [\"COLOMBARD\",\"IB0015\",5,325,140,1450,800,0.5,42.0]], \n",
     "                         index=varieties, columns=cul_vars)  # from CSIRO_VineLOGIC_datasets\n",
     "            for ff in f:\n",
     "                df = pd.read_json(os.path.join(ws, ff))\n",
@@ -665,7 +675,7 @@
    },
    "outputs": [],
    "source": [
-    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -676,7 +686,7 @@
    },
    "outputs": [],
    "source": [
-    "display(button)"
+    "#display(button)"
    ]
   },
   {
