add extra diversion variable and updating some cost defaults based on finance data

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -197,6 +197,7 @@
     "              \"Water entitlement\": \"water_entitlement\",\n",
     "              \"Water allocation factor\": \"allocation_factor\",\n",
     "              \"Private diversion factor\": \"diversion_factor\",\n",
+    "              \"Water pumping cost\": \"water_pumping_rate\",\n",
     "              \"Cost per tip\": \"costs_per_tip\", \"Number of tips\": \"ntips\",\n",
     "              \"Cost per spray\": \"costs_per_spray\", \"Number of sprays\": \"nsprays\",\n",
     "              \"Days between irrigation applications per phenology\": \"IRRETNPERIOD\", \n",
@@ -675,7 +676,7 @@
    },
    "outputs": [],
    "source": [
-    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -686,7 +687,7 @@
    },
    "outputs": [],
    "source": [
-    "#display(button)"
+    "display(button)"
    ]
   },
   {
