irrig-gross margin plotting support

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -188,49 +188,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_scen_json(scen_json_fname):\n",
-    "    mapper = {\"Crush Price\": \"grape_price\", \n",
-    "              \"Maximum irrigation mm per phenology\": \"IRSTAGECAP\",\n",
-    "              \"Maximum daily irrigation mm per phenology\": \"IRDAYSTAGECAP\",\n",
-    "              \"Water market cost\": \"water_market_rate\",\n",
-    "              \"Water delivery cost\": \"water_delivery_rate\",\n",
-    "              \"Water entitlement\": \"water_entitlement\",\n",
-    "              \"Water allocation factor\": \"allocation_factor\",\n",
-    "              \"Private diversion factor\": \"diversion_factor\",\n",
-    "              \"Water pumping cost\": \"water_pumping_rate\",\n",
-    "              \"Cost per tip\": \"costs_per_tip\", \"Number of tips\": \"ntips\",\n",
-    "              \"Cost per spray\": \"costs_per_spray\", \"Number of sprays\": \"nsprays\",\n",
-    "              \"Days between irrigation applications per phenology\": \"IRRETNPERIOD\", \n",
-    "              \"Soil water irrigation trigger per phenology\": \"IRCRITSW\",\n",
-    "              \"Soil water irrigation defict refill percent per phenology\": \"IRREFILLPER\", \n",
-    "              \"Rootstock\": \"Rootstock\",\n",
-    "              \"Variety\": \"Variety\",\n",
-    "             }\n",
-    "    d = {}\n",
-    "    js = pd.read_json(os.path.join(scen_json_fname))\n",
-    "    js = js[js.keys()[0]]  # there is only one scen per file\n",
-    "    for k, v in js.items():\n",
-    "        if k != \"Description\":\n",
-    "            d[mapper[k]] = v[\"Value\"]\n",
-    "            #if \"irr\" in k:\n",
-    "             #   print(k)\n",
-    "              #  d[mapper[k]][\"Value\"] = v[\"Value\"]\n",
-    "               # d[mapper[k]][\"vinelogic_file\"] = \"RuleBasedIrrigation.json\"\n",
-    "            #else:\n",
-    "             #   d[mapper[k]] = v[\"Value\"]\n",
-    "    #   sorted()\n",
-    "    #for js in js.unique():\n",
-    "    #update\n",
-    "    #write\n",
-    "    return d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def scen_json_to_vinelogic(d, ws):\n",
     "    for k, v in d[ws].items():\n",
     "        #print(k, v)\n",
@@ -358,8 +315,7 @@
     "        shutil.copytree(base_d, s)\n",
     "\n",
     "        #sjf = s + \".json\"\n",
-    "        #print(sjf)\n",
-    "        d = process_scen_json(scen_json_fname=sjf)\n",
+    "        d = mjknowling.process_scen_json(scen_json_fname=sjf)\n",
     "        #TODO\n",
     "        #scen_d = mjknowling.process_scen_json()\n",
     "        #TODO\n",
@@ -636,7 +592,6 @@
     "    for k, v in on_button_clicked.sel_scens.items():\n",
     "        cd[k.strip(\".json\")] = on_button_clicked.sel_scens[k]\n",
     "    #print(\"plotting {}\".format(plot))\n",
-    "    #print(cd, plot, dd)\n",
     "    mjknowling.plot_scen(cd, plot, scen_d=dd)#on_button_clicked.scen_d)"
    ]
   },
@@ -705,10 +660,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "#mjknowling.invest_irrig_vol_to_yield_relationship(\"Scenario01\")  #(\"irrig_yield_sens_tests\")"
+    "#mjknowling.invest_irrig_vol_to_yield_relationship(\"Scenario01\", include_gross_margin=True)  #(\"irrig_yield_sens_tests\")"
    ]
   },
   {
