--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
+    "\n%%capture\n",
     "from __future__ import print_function\n",
     "import os\n",
     "import ipywidgets as ipyw\n",
